--- a/First Assignment.Rmd
+++ b/First Assignment.Rmd
@@ -1,8 +1,8 @@
 ---
 title: "First Assignment"
 output:
-  html_document: default
   pdf_document: default
+  html_document: default
 ---
 
 ```{r setup, include=FALSE}
@@ -35,10 +35,12 @@ summary(USAccDeaths)
 ```{r echo=FALSE}
 boxplot(USAccDeaths, main ='Number of Death')
 ```
-
-## Plot and Histogram
+* Plot
 ```{r USAccDeath,echo=FALSE}
 plot(USAccDeaths, ylab = 'Number of Death')
+```
+* Histogram
+```{r USAccDeath,echo=FALSE}
 hist(USAccDeaths, main = 'Accidental Deaths in the US 1973–1978', xlab = 'number of death')
 ```
 
