--- a/First Assignment.Rmd
+++ b/First Assignment.Rmd
@@ -1,6 +1,7 @@
 ---
 title: "First Assignment"
 output:
+  word_document: default
   pdf_document: default
   html_document: default
 ---
@@ -20,27 +21,27 @@ This is a time series giving the monthly totals of accidental deaths in the USA.
 
 ## Variation
 * Chart
-```{r USAccDeaths,echo=FALSE}
+```{r,echo=FALSE}
 show(USAccDeaths)
 ```
 * Range
-```{r USAccDeaths,echo=FALSE}
+```{r,echo=FALSE}
 range(USAccDeaths)
 ```
 * Quartiles
-```{r USAccDeaths,echo=FALSE}
+```{r,echo=FALSE}
 summary(USAccDeaths)
 ```
 * Boxplots
-```{r echo=FALSE}
+```{r,echo=FALSE}
 boxplot(USAccDeaths, main ='Number of Death')
 ```
 * Plot
-```{r USAccDeath,echo=FALSE}
+```{r,echo=FALSE}
 plot(USAccDeaths, ylab = 'Number of Death')
 ```
 * Histogram
-```{r USAccDeath,echo=FALSE}
+```{r,echo=FALSE}
 hist(USAccDeaths, main = 'Accidental Deaths in the US 1973–1978', xlab = 'number of death')
 ```
 
